[package]
name = "bcs-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.bcs]
path = ".."

[[bin]]
name = "e2e"
path = "fuzz_targets/e2e.rs"
test = false
doc = false
bench = false

[[bin]]
name = "serialize"
path = "fuzz_targets/serialize.rs"
test = false
doc = false
bench = false
